🐛 fix(setup.sh): atribuido permissão no arquivo swagger.json e pegar o ip dinamicamente
Foi feito correções na parte de permissão do arquivo "swagger.json" e foi implementado para pegar o ip do servidor de forma dinamica.
