# public/swagger.json
@@ -5,6 +5,12 @@
         "description": "API Rest criada para o processo seletivo da SEPLAG 2025.",
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "/api/v1",
+            "description": "Servidor de API"
+        }
+    ],
     "paths": {
         "/api/v1/auth": {
             "post": {
@@ -2762,6 +2768,14 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Insira o token JWT no formato: Bearer {token}",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
